Made Angular parent fields readonly; tutorial form validation working; awaiting release of https://github.com/angular/flex-layout/issues/270 in order to fxLayoutAlign center with hidden fields

--- a/SkillPath/angular/app/templates/category-search/category-search.component.scss
+++ b/SkillPath/angular/app/templates/category-search/category-search.component.scss
@@ -25,6 +25,16 @@ md-list-item {
     padding: 3px;
 }
 
+.readonly {
+    z-index: 99999;
+    background-color: gray;
+    position: fixed;
+    // width: 100%;
+    // height: 100%;
+    
+
+}
+
 md-card {
     padding: 10px;
 }
